tests/positive/StdlibImport/StdlibImport.juvix
module StdlibImport;

import Stdlib.Prelude open;

import A;

two : Nat := 1 + 1;

foo : A.Foo := A.bar;
