tests/negative/Package/PackageJuvixNoPackageSymbol/Package.juvix
module Package;

import Stdlib.Prelude open;
import PackageDescription open;

abc : Nat := 1;
